# radiance_meshes

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  analyze_decimation.py  analyze_scores.py  convert.py  convert2.py  convert3.py  diagnose_densification.py  download_n_benchmark.sh  download_n_benchmark_rt.sh  edit_cube.py  environment.yml  evaluate.py  evaluate_decimation.py  evaluate_placement_strategies.py  evaluate_selection_strategies.py  evaluate_traced.py  evaluate_traced_optix.py  extract_mesh.py  hyperparam.py  investigate_placement.py  investigate_vertex_importance.py  latent.pt  micro_profile.py  nerf_test.py  nerf_test2.py  nerf_test3.py  patch  patch2  profile_train.py  pyproject.toml  render_field.py  render_fisheye.py  render_gradient.py  render_smooth.py  render_smooth_iter.py  requirements.txt  (+13 more)
.virtual_documents/notebooks/: Untitled.ipynb  dist_grad_check.ipynb  distortion.ipynb  field_smoothness_3D.ipynb
data/: camera.py  colmap_loader.py  dataset_readers.py  loader.py  types.py
delaunay_rasterization/: __init__.py
delaunay_rasterization/internal/: alphablend_tiled_slang.py  alphablend_tiled_slang_fast.py  alphablend_tiled_slang_flux.py  alphablend_tiled_slang_interp.py  alphablend_tiled_slang_interval.py  render_err.py  render_grid.py  tile_shader_slang.py  util.py
dtlookup/: __init__.py  dtlookup.py  dtwalk.py
experiments/: test_field_transfer.py
hyperparams/: apr16_search.csv  apr16_search_out.csv  apr3_m360.csv  contrib_thres.csv  contrib_thres_out.csv  cost_search.csv  cost_search_out.csv  dist_interval.csv  dist_interval_out.csv  dist_search.csv  dist_search_out.csv  freeze_search2.csv  freeze_search2_out.csv  freeze_search3.csv  freeze_search3_out.csv  freeze_search_out.csv  glo_search.csv  glo_search2.csv  glo_search2_out.csv  glo_search3.csv  glo_search3_out.csv  glo_search_out.csv  head_width.csv  head_width_out.csv  init_lr_search.csv  init_lr_search_out.csv  init_lr_search_out_pt2.csv  refine.csv  run_im360_out.csv  run_m360.csv  run_m360_2.csv  run_m360_out.csv  run_m360_out_r33.csv  run_m360_out_r35.csv  run_m360_r32.csv  search_sep16.csv  sweep_v14.csv  sweep_v14_out.csv  thresh.csv  thresh_out.csv  (+11 more)
jaxutil/: tetra_quad.py
models/: base_model.py  flux_model.py  frozen.py  frozen_features.py  ingp_color.py  ingp_density.py  shell2_kernel.py  shell_kernel.py  simple.py  tet_color.py  vertex_color.py  vertex_model.py
notebooks/: clipping_coord.ipynb  color_fn_debug.ipynb  delaunay_test.ipynb  delaunay_vis.ipynb  dist_grad_check.ipynb  distortion.ipynb  distortion_math.ipynb  distortion_math.py  field_smoothness.ipynb  field_smoothness_3D.ipynb  integral.ipynb  multi_tet_debug.ipynb  multi_tet_debug_rt.ipynb  nearplane_tet.ipynb  nvdiffrast.ipynb  quadratic.py  ranking_loss_test.ipynb  rect_range.ipynb  sensitivity.ipynb  single_tet_debug.ipynb  test_init_view.ipynb  test_tet_render.ipynb  unbias_distortion.ipynb
results/: ablations_in.csv  ablations_out.csv  ablations_out2.csv  all_fps_r44.csv  all_fps_r44_instanced.csv  all_fps_r44_mesh.csv  all_fps_r44_rt.csv  all_nofreeze_r2.csv  all_r2.csv  all_r44_wt1.75.csv  bicycle.txt  bonsai.txt  counter.txt  drjohnson.txt  flowers.txt  garden.txt  kitchen.txt  m360.csv  m360_r44.csv  m360_r44_wt1.75.csv  playroom.txt  refine_de16k_ingpU_contribT  room.txt  run_full_r44.csv  run_full_r44_nocc.csv  run_full_r45.csv  run_full_r47.csv  run_m360_out_r42.csv  run_m360_out_r43.csv  run_m360_out_r43_500k.csv  run_tntdb_out_r43.csv  small.csv  stump.txt  train.txt  treehill.txt  truck.txt
scripts/: __init__.py  base.blend  collect_stats.bash  export_spinning.py  extract_mesh.py  process_stats.py  render_smooth_pulsing.py  run_full.csv  run_full2.csv  run_full_data.csv  run_m360.csv  run_tntdb.csv  timediff.py  train_smalls.bash
sh_slang/: eval_sh.py
sh_slang/slang/: safe-math.slang  sh-half.slang  sh.slang  sh_kernel.slang  tensor-util.slang
submodules/spectral_norm3/: __init__.py  sp_norm3.py  (+1 more)
tests/: bench_backward.py  compare_renders_detailed.py  compare_vk_slang.py  debug_grads.py  debug_grads_minimal.py  debug_ref_backward.py  debug_vp_check.py  diagnose_tet_counts.py  diagnose_tiled_fwd.py  diagnose_vk_opacity.py  kernel_viz.py  micro_profile.py  multi_tet_test.py  sensitivity_test.py  shell_vs_star_test.py  single_tet_test.py  test_backward_replay.py  test_fast_vs_interp.py  test_interpolation_accuracy.py  test_scanline_fill.py  test_slang_vs_vk.py  test_vk_backward.py
tracers/: CMakeLists.txt
tracers/splinetracers/tetra_splinetracer/: Backward.cpp  Backward.h  CMakeLists.txt  CUDABuffer.h  Forward.cpp  Forward.h  GAS.cpp  GAS.h  TriangleMesh.cpp  TriangleMesh.h  cuda_util.h  exception.h  optixTriangle.cpp  py_binding.cpp  scene.h  splinetracer.cpp  structs.h
tracers/splinetracers/tetra_splinetracer/slang/: backwards_kernel.slang  spline-machine.slang  tri-intersect.slang  triangle.slang
utils/: args.py  cam_util.py  camera_path.py  compare_quad.py  compare_quad_rt.py  contraction.py  decimation.py  densification.py  eval_sh_py.py  gradient.py  graphics_utils.py  hashgrid.py  ingp_util.py  mesh_util.py  model_util.py  optim.py  phong_shading.py  render_vk.py  safe_math.py  ssim.py  test_util.py  topo_utils.py  train_util.py  viz_util.py
vulkan_renderer/: slangpy_renderer.py
(+78 files in other folders)
